added static meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
     <!-- Pokemon Draftzone logo and images created by @Mr.Twang -->
+    <meta name="title" content="Pokemon DraftZone" />
+    <meta name="description" content="The ultimate Pokemon draft resource!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pokemondraftzone.com/" />
+    <meta property="og:title" content="Pokemon DraftZone" />
+    <meta
+      property="og:description"
+      content="The ultimate Pokemon draft resource!"
+    />
+    <meta
+      property="og:image"
+      content="https://pokemondraftzone.com/assets/logo_small.png"
+    />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="http://pokemondraftzone.com/" />
+    <meta property="twitter:title" content="Pokemon DraftZone" />
+    <meta
+      property="twitter:description"
+      content="The ultimate Pokemon draft resource!"
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+    <meta name="theme-color" content="#F3955D" />
   </head>
   <body>
     <app-root></app-root>
