--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="https://pokemondraftzone.com/assets/logo_small.png"
     />
     <meta name="theme-color" content="#F3955D" />
   </head>
