changed to full logo

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     />
     <meta
       property="og:image"
-      content="https://pokemondraftzone.com/assets/logo_small.png"
+      content="https://pokemondraftzone.com/assets/logo.png"
     />
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="http://pokemondraftzone.com/" />
@@ -29,7 +29,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://pokemondraftzone.com/assets/logo_small.png"
+      content="https://pokemondraftzone.com/assets/logo.png"
     />
     <meta name="theme-color" content="#F3955D" />
   </head>
