Pokemon home dance practiced. Uniform direction achieved. Ready for olympics

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
       property="og:description"
       content="The ultimate Pokemon draft resource!"
     />
-    <meta
+    <!-- <meta
       property="og:image"
       content="https://pokemondraftzone.com/assets/logo.png"
-    />
+    /> -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="http://pokemondraftzone.com/" />
     <meta property="twitter:title" content="Pokemon DraftZone" />
@@ -27,10 +27,10 @@
       property="twitter:description"
       content="The ultimate Pokemon draft resource!"
     />
-    <meta
+    <!-- <meta
       property="twitter:image"
       content="https://pokemondraftzone.com/assets/logo.png"
-    />
+    /> -->
     <meta name="theme-color" content="#F3955D" />
   </head>
   <body>
