--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,12 @@
       property="twitter:image"
       content="https://pokemondraftzone.com/assets/logo.png"
     /> -->
-    <meta name="theme-color" content="#F3955D" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <app-root></app-root>
