pokemon-select working

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -16,10 +16,6 @@
       property="og:description"
       content="The ultimate Pokemon draft resource!"
     />
-    <!-- <meta
-      property="og:image"
-      content="https://pokemondraftzone.com/assets/logo.png"
-    /> -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="http://pokemondraftzone.com/" />
     <meta property="twitter:title" content="Pokemon DraftZone" />
@@ -27,10 +23,6 @@
       property="twitter:description"
       content="The ultimate Pokemon draft resource!"
     />
-    <!-- <meta
-      property="twitter:image"
-      content="https://pokemondraftzone.com/assets/logo.png"
-    /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
