move sub-theme up to cover overlay

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     />
     <link rel="manifest" href="manifest.webmanifest" />
   </head>
-  <body>
+  <body sub-theme="prime">
     <app-root></app-root>
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
