move top navbar to own component

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     <link rel="manifest" href="manifest.webmanifest" />
   </head>
   <body sub-theme="prime">
-    <app-root></app-root>
+    <pdz-root></pdz-root>
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
     >
