update shadow elevation diction

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     />
     <link rel="manifest" href="manifest.webmanifest" />
   </head>
-  <body sub-theme="prime" pdz-theme="normal" pdz-theme-mode="light">
+  <body sub-theme="prime" pdz-theme="normal" pdz-theme-mode="dark">
     <pdz-root></pdz-root>
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
